--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,26 @@
 cmake_minimum_required(VERSION 3.6)
 project(SnakeAI)
-include_directories(lib)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_CXX_STANDARD 11)
-set(SOURCE_FILES src/GameCtrl.cpp include/GameCtrl.h src/main.cpp src/util/Console.cpp include/util/Console.h src/model/Map.cpp include/model/Map.h src/model/Pos.cpp include/model/Pos.h src/model/Point.cpp include/model/Point.h include/util/util.h src/model/Snake.cpp include/model/Snake.h include/model/Direction.h)
+
+set(OPENGL_FILE E:/c++lib/OpenGL)
+INCLUDE_DIRECTORIES(${OPENGL_FILE}/INCLUDE)
+include_directories(include)
+include_directories(lib)
+link_directories(${OPENGL_FILE}/LIB)
+
+set(SOURCE_FILES src/main.cpp
+        include/Snake.h include/Direction.h include/Board.h src/Pos.cpp
+        include/Pos.h src/Point.cpp include/Point.h src/SnakeManager.cpp
+        include/SnakeManager.h include/util.h
+        src/Board.cpp src/Snake.cpp)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 add_executable(SnakeAI ${SOURCE_FILES})
-link_directories(main.cpp)
+
+
+set(TARGET_LIB
+        "E:/c++lib/OpenGL/LIB/GlU32.LIB"
+        "E:/c++lib/OpenGL/LIB/OpenGL32.lib"
+        "E:/c++lib/OpenGL/LIB/glut32.lib"
+        )
+
+target_link_libraries(SnakeAI ${TARGET_LIB})
